# nami-lm

./: .gitignore  ARCHITECTURE.md  LEARN_TRANSFORMER.md  PHASE9_DESIGN.md  PHASES.md  README.md  backlog.md  dialogues.py  eval.py  eval_multiturn.py  eval_multiturn_v2.py  extract_corpus.py  feedback_inbox.md  journal.md  program.md  pyproject.toml  soul_qa.py  state.json  synthesize_qa.py  topic_qa.py  train.py  train_bpe.py  web_chat.py
tokenizer/: bpe.py  merges.json  vocab_preview.txt
